add updateNotify post function & update API.yml
